--- a/index.html
+++ b/index.html
@@ -1,16 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
+<h1>abod 241</h1>
+<title>fifa2024</title>
+<br>
+<h4>abod</h4>
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ismail</title>
+    <meta name="description" content="الموقع خاص بلرياضة">
+    <meta name="keyword" content="football , sport">
 </head>
+
 <body>
+    <h2>my names azez</h2>
+    <Br>
+    <p align="right">and i like play football</p>
+    <br>
+    <p align="center">i hate play tennis</p>
+
+    <pre>        <u>azez</u> and
+        <small>ahmed</small> and
+        <i>yasuo</i> and
+        <mark>eassy^_^</mark>
+
+        if you want buy account league you need to pay <mark>1500$</mark>
+
+        dont play in the streets <u>Warnning</u>
+
+        <img  title="Darkman best diana in euw" src="https://i.ytimg.com/vi/82ycLbXFaQw/maxresdefault.jpg" alt="Logo">
+
+        <audio controls loop muted >
+            <source src="https://serv100.albumaty.com/dl/gem/george-wassouf/albums/allah-karem/02_-_Allah_Kareem.mp3" >
+        </audio> 
+    
+        
+
+    </pre>
+    <video controls>
+        <source src="C:\Users\Darkman\Desktop\azez\video-1604882123.mp4">
+
+
+    </video>
     <div>
-        <a type="button" onclick="
-         " >
-            riot games
-        </a>
+        <iframe width="420" height="315" src="https://www.youtube.com/embed/2aDmCbJ1ylo?si=E_HWKsdcAwY3-1Zn">
+        </iframe>
     </div>
+    <br>
+    <br>
+
+    <table border="1" bgcolor="pink">
+        <tr>
+            <th bgcolor="red">name</th>
+            <th bgcolor="white">age</th>
+            <th bgcolor="blue">speed</th>
+        </tr>
+        <tr>
+            <td>ahmed</td>
+            <td>25</td>
+            <td>2500</td>
+        </tr>
+        <tr>
+            <td>azez</td>
+            <td>24</td>
+            <td>3000</td>
+        </tr>
+    </table>
+
+    <ul>
+        <li>azez</li>
+        <li>ahmed</li>
+        <li>omar</li>
+        <li>ali</li>
+        <li>abood</li>
+
+    </ul>
+    <ol type="1">
+        <li>azez</li>
+        <li>ahmed</li>
+        <li>mohamed</li>
+        <li>abood</li>
+    </ol>
+
+    <HR>
+    <h1 align="center"><a style="text-decoration: none;" target="_blank"
+            href="https://www.youtube.com/watch?v=qAiGpAlJKtg">مسلم عربي اني </a></h1>
+    </HR>
+
+    <form>
+        <fieldset>
+            <div>
+                <label for="text"> User name</label>
+                <input id="text" type="text" required>
+            </div>
+            <div>
+                <label for="pass">password</label>
+                <input id="pass" type="password" required>
+            </div>
+            <input type="submit" value="اضغط هنا">
+        </fieldset>
+
+        <hr>
+        <div> <label for="color">color</label>
+
+
+            <input id="color" type="color">
+        </div>
+        <br>
+
+        <div> <label for="search">search</label>
+            <input id="search" type="search">
+        </div>
+        <br>
+
+
+        <div> <label for="url">url</label>
+            <input id="url" type="url">
+        </div>
+        <br>
+        <div>
+            <label for="number">number</label>
+            <input id="number" type="number" min="0" max="10" step="5">
+        </div>
+        <br>
+
+        <div>
+            <label for="date">date</label>
+            <input id="date" type="date">
+        </div>
+        <br>
+
+        <h2>whats is your favurite language?</h2>
+        <div>
+            <input id="html" type="radio" value="html" name="lang">
+            <label for="html">html</label>
+        </div>
+        <div>
+            <input id="css" type="radio" value="css" name="lang">
+            <label for="css">css</label>
+        </div>
+        <input type="submit">
+        <hr>
+
+        <h2>whats is your favurite language?</h2>
+        <div>
+            <input id="html" type="checkbox" value="html"name="lang>
+            <label for="html">html</label>
+        </div>
+
+        <div> <input id="css" type="checkbox" value="css"name="lang>
+            <label for="css">css</label>
+        </div>
+        <input type="submit">
+
+
+
+
+
+    </form>
+
+
+
 </body>
+
+
+
+
+
+
+
+
+
+
 </html>
